--- a/ColorsOfIspiration.html
+++ b/ColorsOfIspiration.html
@@ -16,31 +16,42 @@
 </head>
 
 <body>
-    <header>
-          <!-- Desktop Nav -->
-             <div class="logo">
-                 <h1>~~~ Colors Of Inspiration ~~~</h1>
-             </div>
 
-             <!-- Mobile Nav -->
-             <!-- <div class="mobile-nav">
-                              <div class="hamburger-container">
-                                  <button><i class="fa fa-bars fa-lg" aria-hidden="true"></i></button>
-                              </div>
-                              <div class="logo-container">
-                                  <div class="logo"></div>
-                              </div> -->
-</header>
+      <header>
+            <!-- Desktop Nav -->
+            <div class="container desktop-nav">
+              <div class="logo">
+                  <h1><a href='#'><strong>~~~ Colors Of Inspiration ~~~</strong></a></h1>
+              </div>
+            </div>
+
+            <!-- Mobile Nav -->
+            <div class="mobile-nav">
+                <div class="hamburger-container">
+                    <button><a href='#'><i class="fa fa-bars" aria-hidden="true"></a></i></button>
+                </div>
+                <div class="logo-container">
+                    <div class="logo"><h1><a href='#'><strong>~~ Colors Of Inspiration ~~</strong></a></h1></div>
+                </div>
+                <div class="cart-container">
+                    <button><a href='#'><i class="fa fa-shopping-cart" aria-hidden="true"></a></i></button>
+                </div>
+            </div>
+        </header>
+
 
     <section class='hero-section'>
         <div class='hero'>
                 <ul>
-                     <li><button><a href='#'>Gallery</a></button></li>
-                     <li><button><a href='#'>About Me</a></button></li>
-                     <li><button><a href='#'>Book Your Art Party</a></button></li>
-                     <li><button><a href='#'>Contact me</a></button></li>
-
+                     <li><a href='#'><strong>~ Gallery</strong></a></li>
+                     <li><a href='#'><strong>~ About Me</strong></a></li>
+                     <li><a href='#'><strong>~ Book Your Art Party</strong></a></li>
+                     <li><a href='#'><strong>~ Contact me</strong></a></li>
+                     <li><a href='#'><i class="fa fa-shopping-cart" aria-hidden="true"></i></a></li>
                  </ul>
+
+                 </div>
+
              </div>
     </section>
 
@@ -58,18 +69,30 @@
             <div class='pic-6'>
                 <a href ='#'><img src='./img/pic-6.JPG' alt='flora'></a>
             </div>
-            <!-- <div class='pic-7'>
+            <div class='pic-7'>
                 <a href ='#'><img src='./img/pic-7.JPG' alt='blue'></a>
             </div>
-            <div class='pic-8'>
-                <a href ='#'><img src='./img/pic-8.JPG' alt='forest'></a>
-            </div>  --> 
+
 
         </div>
     </section>
 
 
-    <footer></footer>
+    <footer>
+      <div class="col-12 col-md-3">
+                        <h4>Follow Us</h4>
+                                      <ul class='social-icons'>
+                                          <li><a href='#'><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
+                                          <li><a href='#'><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                          <li><a href='#'><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+                                          <li><a href='#'><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+
+                                      </ul>
+                                  </div>
+
+
+
+    </footer>
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
