--- a/ColorsOfIspiration.html
+++ b/ColorsOfIspiration.html
@@ -55,7 +55,7 @@
              </div>
     </section>
 
-    <section class='art-display-section'>
+    <section class='desktop-nav art-display-section'>
         <div class='art-display'>
             <div class='pic-1'>
                 <a href ='#'><img src='./img/pic-1.JPG' alt='poppies'></a>
@@ -72,11 +72,28 @@
             <div class='pic-7'>
                 <a href ='#'><img src='./img/pic-7.JPG' alt='blue'></a>
             </div>
-
-
         </div>
     </section>
 
+    <div class='mobile-nav'>
+      <div class='art-display'>
+          <div class='mobile-pic'>
+              <a href ='#'><img src='./img/pic-1.JPG' alt='poppies'></a>
+          </div>
+           <div class='mobile-pic'>
+              <a href ='#'><img src='./img/pic-3.jpg' alt='blossom'></a>
+          </div>
+         <div class='mobile-pic'>
+              <a href ='#'><img src='./img/pic-4.JPG' alt='Gold'></a>
+          </div>
+          <div class='mobile-pic'>
+              <a href ='#'><img src='./img/pic-6.JPG' alt='flora'></a>
+          </div>
+          <div class='mobile-pic'>
+              <a href ='#'><img src='./img/pic-7.JPG' alt='blue'></a>
+          </div>
+      </div>
+</div>
 
     <footer>
       <div class="col-12 col-md-3">
